--- a/index.html
+++ b/index.html
@@ -1,29 +1,65 @@
 <!DOCTYPE html>
-<html>
-  <head>
-      <h1>EMIRAGE REALATORS</h1>
-      <h2>Total Elegance</h2>
-      <link href=css/styles.css rel="stylesheet" type="text/css">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Benjamin Kabbis - Data Analyst</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <div class="container">
+            <img src="MyImage.png" alt="Benjamin Kabbis" class="avatar">
+            <h1>Benjamin Kabbis</h1>
+            <h2>Data Analyst</h2>
+        </div>
+    </header>
 
-  </head>
-
-  <body>
-      <p1>Residencials</p1>
-        <ul>
-          <li>Nairobi</li>
-          <li>Kisumu</li>
-          <li>Mombasa</li>
-
+    <nav>
+        <ul class="nav-links">
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
-      <p2>Offices</p2>
-        <ul>
-            <li>for office spaces visit <a href="https://www.emiragerealators.com">Emirage.com</a> and get the best deals!!!!</p>
-            <img src=pics/interior.jpg alt="A home to live">
-        </ul>
-        <p3>We offer high end mansionates and club houses tailored to your needs</p3>
-  </body>
+    </nav>
 
+    <main>
+        <section id="about">
+            <h2>About Me</h2>
+            <p>I am a passionate Data Analyst based in the United Kingdom, skilled in data visualization, predictive modeling, and problem-solving. I enjoy transforming data into actionable insights to drive business decisions.</p>
+        </section>
 
+        <section id="skills">
+            <h2>Skills</h2>
+            <ul>
+                <li>Data Visualization (Tableau, Power BI)</li>
+                <li>SQL and Database Management</li>
+                <li>Python for Data Science</li>
+                <li>Machine Learning</li>
+                <li>Statistical Analysis</li>
+            </ul>
+        </section>
 
+        <section id="projects">
+            <h2>Projects</h2>
+            <ul>
+                <li><a href="https://github.com/KabbisB/project1">Project 1: Sales Forecasting Model</a></li>
+                <li><a href="https://github.com/KabbisB/project2">Project 2: Customer Churn Analysis</a></li>
+                <li><a href="https://github.com/KabbisB/project3">Project 3: Interactive Data Dashboard</a></li>
+            </ul>
+        </section>
 
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>Email: <a href="mailto:kabbisbenjamin@gmail.com">kabbisbenjamin@gmail.com</a></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/kabbisbenjamin" target="_blank">Kabbis Benjamin</a></p>
+            <p>LeetCode: <a href="https://leetcode.com/u/Kabbis/" target="_blank">Kabbis</a></p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Benjamin Kabbis. All Rights Reserved.</p>
+    </footer>
+</body>
 </html>
